Ensure that word break occurs at word boundary and set the key value align to top.
Closes andypf/json-viewer#18.

--- a/src/styles.css
+++ b/src/styles.css
@@ -70,7 +70,7 @@
 
 .data-row .key-value-wrapper {
   display: flex;
-  align-items: center;
+  align-items: top;
 }
 
 .data-row .key {
@@ -181,7 +181,7 @@
 }
 
 .data-row .value .value-data {
-  word-break: break-all;
+  word-break: break-word;
 }
 
 .show-data-types .data-row .value .type {
